# goit-pythonweb-hw-08

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: c92611af6229_init.py
src/api/: contacts.py
src/conf/: config.py  constants.py
src/db/: session.py
src/models/: contact.py
src/repository/: contacts.py
src/schemas/: __init__.py  schemas.py
src/services/: contacts.py
src/utils/: logger.py
